fix: add CORS configuration for Netlify frontend